Resolve "No proper error handling if schematron xsl has runtime error"